add controllers, config, security and delete Inventario